
<resources>
    <string name="app_name">Invent_App</string>

    <string name="overview">OverView</string>

    <string name="empty_view_title_text">Click Button to Add Inventory</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding an inventory</string>

    <string name="editor_insert_pet_successful">Pet saved</string>

    <string name="editor_insert_pet_failed">Error with saving pet</string>

    <string name="editor_activity_title_new_pet">Add a Pet</string>

    <string name="editor_activity_title_edit_pet">Edit a Pet</string>

        <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

        <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

        <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="name">Name</string>

        <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="price">Price</string>

        <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="quantity">Quantity</string>

        <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
        <string name="incrementquantity">+</string>

        <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
        <string name="decreasequantity">-</string>

        <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
        <string name="email">Email</string>

        <!-- Units for weight of the pet (kilograms) [CHAR LIMIT=5] -->
        <string name="EmailValue">Email Value</string>

        <!-- Label for dropdown menu option if the pet's gender is unknown [CHAR LIMIT=20] -->
        <string name="Sold">Sold</string>

        <!-- Label for dropdown menu option if the pet is male [CHAR LIMIT=20] -->
        <string name="image">Image</string>

        <string name="order">Order</string>

        <string name="MakeSell">Make Sell</string>

        <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
        <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

        <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
        <string name="discard">Discard</string>

        <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
        <string name="keep_editing">Keep Editing</string>

        <string name="editor_delete_pet_failed">Error with deleting pet</string>

        <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
        <string name="delete_dialog_msg">Delete this pet?</string>

        <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
        <string name="delete">Delete</string>

        <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
        <string name="cancel">Cancel</string>

        <string name="editor_delete_pet_successful">Pet deleted</string>

        <string name="exceptionForUri">Cannot query unknown URI </string>


    <string name="editor_delete_successful">Confirmed delete</string>

    <string name="quantityException">Quantity cannot be less than 0</string>

    <string name="confirmDelete">Confirmed Delete</string>

    <string name="InstockException"> InStock quantity cannot be less than 0</string>


</resources>
