<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/overview"
            android:layout_height = "wrap_content"
            android:layout_width = "0dp"
            android:layout_weight = "1"
            android:paddingTop = "16dp"
            android:textColor= "@color/colorAccent"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceSmall"
            />



        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_name"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAppearance="?android:textAppearanceMedium"
                android:hint="@string/name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_price"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAppearance="?android:textAppearanceMedium"
                android:hint="@string/price"
                android:inputType="number"
                />
        </LinearLayout>


    </LinearLayout>


    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <!-- Label -->
        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="16dp"
            android:text="@string/quantity"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/increment"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="8dp"
            android:onClick="incrementQuantity"
            android:text="@string/incrementquantity"
            />
        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantity"
                android:textAppearance="?android:textAppearanceMedium"
                android:inputType="number"

                />
        </LinearLayout>

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="8dp"
            android:onClick="decrementQuantity"
            android:text="@string/decreasequantity" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <!-- Label -->
        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="16dp"
            android:text="@string/email"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/emailvalue"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            android:hint="@string/EmailValue" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <!-- Label -->
        <TextView
            android:id="@+id/sold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="16dp"
            android:text="@string/Sold"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/soldquantity"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            android:hint="Sold quantity"
            android:inputType="number"
            />


    </LinearLayout>
    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <!-- Label -->
        <TextView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="16dp"
            android:text="@string/image"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorAccent" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_weight="0.5"
            android:text="@string/image"
            android:id="@+id/imageAdd"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <Button
            android:id="@+id/orderRequest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="orderRequest"
            android:text="@string/order" />


        <ImageView
            android:id="@+id/detail_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="center" />
    </LinearLayout>
    </LinearLayout>